--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.3.0",
-    "mongoose": "^5.11.9"
+    "mongoose": "^5.11.9",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.17.0"
