--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "stack": "node stacking/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stacks/blockchain-api-client": "^0.38.1",
+    "@stacks/network": "^1.0.0-beta.20",
+    "@stacks/stacking": "^1.0.0-beta.20",
     "bcrypt": "^5.0.0",
+    "bn.js": "^5.1.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -24,11 +29,16 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
     "nodemon": "^2.0.7"
+  },
+  "volta": {
+    "node": "14.15.4",
+    "npm": "6.14.11"
   }
 }
