--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stxcalculator": "^1.0.10"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
