--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "stack": "node stacking/index.js"
+    "stack": "node stacking/index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
